phase-2/track-mlops-security/week-6/capstone-prj/kyverno-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-image-signature
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: verify-image
      match:
        any:
        - resources:
            kinds:
              - Pod
      verifyImages:
      - imageReferences:
        - "k3d-registry.localhost:5000/*"
        attestors:
        - entries:
          - keys:
              publicKeys: |-
                -----BEGIN PUBLIC KEY-----
                MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEAmGbtAhlmfkC+QYaCy7f10LvvIvd
[...]
                -----END PUBLIC KEY-----
              rekor:
                url: https://rekor.sigstore.dev
                ignoreTlog: true
